Fixed buttons z-index of slideshow

--- a/css/style_page.css
+++ b/css/style_page.css
@@ -284,7 +284,7 @@ section {
 
 #Projects > #slides > .button {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 30%;
     font-size: 3vmax;
     color: rgb(60, 93, 95);
@@ -334,6 +334,11 @@ section {
     position: absolute;
     width: 100%;
     height: 100%;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    -ms-transition: all 0.3s;
 }
 #Projects > #slides > .slide > .title {
     margin-left: 7%;
